--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/grid.css">
+    
 </head>
 <body>
     <div class="Header">
@@ -26,6 +29,23 @@
                 <button type="button"><span></span> BOOK A Table NOW</button>
             </div>
         </div>
+    </div>
+    <div class="services">
+        <h1>Farm to Fork</h1>
+        <div class="col span_1_of_4 box">
+                <img src="css/food1.jpg" alt="">   
+        </div>
+        <div class="col span_1_of_4 box">
+            <img src="css/food2.jpg" alt="">   
+    </div>
+
+    <div class="col span_1_of_4 box">
+        <img src="css/food3.jpg" alt="">   
+</div>
+
+<div class="col span_1_of_4 box">
+    <img src="css/food4.jpg" alt="">   
+</div>
     </div>
 </body>
 </html>
