--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/grid.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
     
 </head>
 <body>
@@ -32,19 +33,19 @@
     </div>
     <div class="services">
         <h1>Farm to Fork</h1>
-        <div class="col span_1_of_4 box">
-                <img src="css/food1.jpg" alt="">   
+        <div class="col-md-3">
+                <img src="css/food1.jpg" class="img">   
         </div>
-        <div class="col span_1_of_4 box">
-            <img src="css/food2.jpg" alt="">   
+        <div class="col-md-3">
+            <img src="css/food2.jpg" class="img">   
     </div>
 
-    <div class="col span_1_of_4 box">
-        <img src="css/food3.jpg" alt="">   
+    <div class="col-md-3">
+        <img src="css/food3.jpg" class="img">   
 </div>
 
-<div class="col span_1_of_4 box">
-    <img src="css/food4.jpg" alt="">   
+<div class="col-md-3">
+    <img src="css/food4.jpg" class="img">   
 </div>
     </div>
 </body>
